feat(knowledge): 实现 FAQ全文检索功能
- 添加 FAQ 全文检索相关的数据结构和接口
- 实现 FAQ 全文检索的查询和索引更新逻辑
- 集成 RediSearch 作为全文检索引擎- 优化文本嵌入向量的生成和处理